cmake_minimum_required(VERSION 3.22)
project(Assignment_Calculator)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment_Calculator
        .idea/.gitignore
        ".idea/Assignment Calculator.iml"
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp
        README.md exam_calculator.cpp exam_calculator.h assignment_calculator.cpp assignment_calculator.h)
